--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
           <div class="navidrome-login" id="navidrome-login">
             <div class="login-form">
               <h3>Navidrome Login</h3>
-              <input type="text" id="navidrome-server" placeholder="Server URL" value="https://musik.radio-endstation.de">
-              <input type="text" id="navidrome-username" placeholder="Username">
-              <input type="password" id="navidrome-password" placeholder="Password">
+              <div class="form-group">
+                <input type="text" id="navidrome-server" placeholder="Server URL" value="https://musik.radio-endstation.de">
+              </div>
+              <div class="form-group">
+                <input type="text" id="navidrome-username" placeholder="Username">
+              </div>
+              <div class="form-group">
+                <input type="password" id="navidrome-password" placeholder="Password">
+              </div>
               <button type="button" id="navidrome-login-btn">Login</button>
             </div>
           </div>
