Refactor Navidrome API Client to OpenSubsonic API Client
- Renamed interfaces and classes from Navidrome to OpenSubsonic for consistency.
- Updated authentication and request methods to reflect OpenSubsonic API.
- Changed CSS class names for login styles from .navidrome-login to .opensubsonic-login.
- Modified environment variables in vite-env.d.ts to use OpenSubsonic naming conventions.
- Updated server routes in unified-server.js for OpenSubsonic stream and cover art proxies.

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <!-- Center Controls -->
         <div class="center-controls">
           <!-- Login Form Overlay -->
-          <div class="navidrome-login" id="navidrome-login">
+          <div class="OpenSubsonic-login" id="OpenSubsonic-login">
             <div class="login-form">
-              <h3>Navidrome Login</h3>
+              <h3>OpenSubsonic Login</h3>
               <div class="form-group">
-                <input type="text" id="navidrome-server" placeholder="Server URL" value="https://musik.radio-endstation.de">
+                <input type="text" id="OpenSubsonic-server" placeholder="Server URL" value="https://musik.radio-endstation.de">
               </div>
               <div class="form-group">
-                <input type="text" id="navidrome-username" placeholder="Username">
+                <input type="text" id="OpenSubsonic-username" placeholder="Username">
               </div>
               <div class="form-group">
-                <input type="password" id="navidrome-password" placeholder="Password">
+                <input type="password" id="OpenSubsonic-password" placeholder="Password">
               </div>
-              <button type="button" id="navidrome-login-btn">Login</button>
+              <button type="button" id="OpenSubsonic-login-btn">Login</button>
             </div>
           </div>
           
