Add waveform track info overlay with deck-specific colors
- Add track info overlay (title, artist, album) within waveform
- Implement deck-specific colors for waveform (red/blue matching player controls)
- Fix z-index hierarchy to prevent controls being covered by waveform
- Add non-selectable text to prevent interference with waveform interaction
- Match waveform height to album art (80px) and reduce spacing for better visual integration

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <div class="microphone-section">
                 <!-- Mic Volume Control -->
                 <div class="mic-volume-control">
-                  <input type="range" min="0" max="100" value="70" id="mic-volume" class="vertical-slider mic-slider">
+                  <input type="range" min="0" max="100" value="70" id="mic-volume" class="mixer-vertical-slider mic-slider">
                   <label class="control-label">LEVEL</label>
                 </div>
                 
