Fix OpenSubsonic login race condition and implement AzuraCast multi-server integration
- Add login state tracking (isOpenSubsonicLoggedIn, autoLoginInProgress)
- Fix timing issue where 'Login Required' appears before auto-login completes
- Add proper error handling and state reset in login functions
- Implement button state flow: SELECT_STATION -> START_STREAMING -> STREAMING_ACTIVE
- Add multi-server AzuraCast support with comma-separated URLs
- Integrate countdown protection with button state reset
- Remove duplicate dropdown UI elements
- Update .gitignore to exclude azuracast/ and compare/ directories

--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
                 </button>
               </div>
               
+              <!-- Station Selection Dropdown (triggered by STREAM button) -->
+              <div class="station-dropdown-overlay" id="station-dropdown-overlay">
+                <div class="station-dropdown-menu" id="station-dropdown-menu">
+                  <div class="dropdown-loading">
+                    <span class="material-icons">radio</span>
+                    <span>Lade Stationen...</span>
+                  </div>
+                </div>
+              </div>
+              
               <!-- Microphone Section (Left: Volume, Center: Button, Right: Meter) -->
               <div class="microphone-section">
                 <!-- Mic Volume Control -->
@@ -144,6 +154,7 @@
                   <span>B</span>
                 </div>
               </div>
+
             </div>
           </div>
         </div>
