Fix metadata transmission - use same WebSocket connection as audio streaming
- Remove HTTP fallback from metadata transmission
- Use established WebSocket connection for both audio and metadata
- Ensure consistent URL usage between audio streaming and metadata updates
- Improve error messaging when WebSocket unavailable
- Align implementation closer to AzuraCast WebDJ standard approach
- Metadata transmission now working correctly

--- a/index.html
+++ b/index.html
@@ -522,6 +522,9 @@
               <button class="auto-queue-btn" id="auto-queue-cd" title="Auto-Play between Deck C and D">
                 C+D
               </button>
+              <button class="queue-mic-add-btn" id="queue-mic-add-btn" title="Add Microphone Break to Queue">
+                <span class="material-icons">mic</span>
+              </button>
               <div class="radio-stream-selector">
                 <button class="radio-stream-btn" id="radio-stream-btn" title="Load Radio Stream to Deck">
                   <span class="material-icons">radio</span>
